--- a/Semana 1/lesson_examples 2/intro_to_npm/package.json
+++ b/Semana 1/lesson_examples 2/intro_to_npm/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "node-js",
+  "name": "intro_to_npm",
   "version": "0.0.0",
   "description": "npm introduction",
-  "version": "0.2.0",
   "main": "app.js",
   "dependencies": {
     "consolidate": "~0.9.1",
     "express": "~3.2.6",
     "mongodb": "~1.3.10"
   },
-  "author": "Armando Couto",
+  "author": "Shaun Verch",
   "license": "BSD"
 }
